# com.thisistheway.grogu

./: settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/thisistheway/grogu/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .CMakeLists.txt.swp  CMakeLists.txt  beskar_usb_validator.c  raw_usb_socket_test.c
app/src/main/java/com/thisistheway/grogu/: BluetoothConstants.kt  BluetoothScanHandler.kt  BluetoothScanner.kt  MacAddressInputActivity.kt  MainActivity.kt  RawSocketCheckerActivity.kt  UsbDeviceChecker.kt  UsbPermissionReceiver.kt  UsbScanHandler.kt
app/src/main/res/drawable/: button_background.xml  edit_text_background.xml  spinner_popup_background.xml
app/src/main/res/layout/: activity_mac_address_input.xml  activity_main.xml  activity_raw_socket_checker.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/mipmap-anydpi-v26/: grogu_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/com/thisistheway/grogu/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
